--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,55 @@
 language: python
-env:
-    - PYTHON=3.5
-    - PYTHON=3.6
-    - PYTHON=3.7
-
-before_install:
-  - wget -q http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b -p /home/travis/miniconda
-  - export PATH=/home/travis/miniconda/bin:$PATH
-  - conda update --yes conda
-
+jobs:
+  include:
+    - name: "Python 3.8 on Xenial linux"
+      python: 3.8
+      os: linux
+      dist: xenial
+      arch: amd64
+    - name: "Python 3.6 on Xenial linux"
+      python: 3.6
+      os: linux
+      dist: xenial
+      arch: amd64
+    - name: "Python 3.7 on Xenial linux"
+      python: 3.7
+      os: linux
+      dist: xenial
+      arch: amd64
+    - name: "Python 3.7 on Bionic linux"
+      python: 3.7
+      os: linux
+      dist: bionic
+      arch: amd64
+    - name: "Python 3.7 on Focal linux"
+      python: 3.7
+      os: linux
+      dist: focal
+      arch: amd64
+    - name: "Python 3.7 on Xenial linux on arm64"
+      python: 3.7
+      os: linux
+      dist: xenial
+      arch: arm64
+    - name: "Python 3.7 on macOS"
+      os: osx
+      osx_image: xcode11.5  # Python 3.7 running on macOS 10.14.4
+      language: shell       # 'language: python' is an error on Travis CI macOS
+    - name: "Python 3.7 on Windows"
+      os: windows           # Windows 10.0.17134 N/A Build 17134
+      language: shell       # 'language: python' is an error on Travis CI Windows
+      before_install:
+        - choco install python --version 3.7.5
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH # command to install dependencies
 install:
-    - conda create -n testenv --yes pip python=$PYTHON
-    - source activate testenv
-    - conda install --yes --file requirements.txt
-    - pip install --upgrade twine
-    - pip install matplotlib==3.0
-    - python setup.py develop
-    - python setup.py sdist bdist_wheel
-
+  - pip3 install --upgrade pip
+  - pip3 install -r requirements.txt
+  - pip3 install --upgrade setuptools wheel
+#  - pip3 install git+https://github.com/MattChanTK/gym-maze.git
+  - pip3 install .
 script:
-    - # Checks whether your distribution’s long description will render correctly on PyPI.
-    - twine check dist/*
-    - # Run tests, show verbose output and print the top 10 slowest running tests
-    - py.test --cov=pyglmnet tests/ --verbose --durations=10
-    - # Run doctests
-    - py.test pyglmnet/pyglmnet.py --verbose --doctest-modules 
-    - # Run flake8 to check that package and tests adhere to PEP8
-    - make flake
+  - travis_wait 80 python3 example.py || travis_wait 80 python example.py
 
 after_success:
-    - bash <(curl -s https://codecov.io/bash)
+  - echo "Successfull."
