--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ numpy>=1.11
 scipy>=0.17
 scikit-learn>=0.18
 pandas>=0.20
-pytest
-pytest-cov
-coverage
-flake8
+#pytest
+#pytest-cov
+#coverage
+#flake8
 pydocstyle
 tqdm>=4.46
