--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ jobs:
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH # command to install dependencies
 install:
   - pip3 install --upgrade pip
+  - pip3 install scipy==1.5.4
   - pip3 install -r requirements.txt
   - pip3 install --upgrade setuptools wheel
 #  - pip3 install git+https://github.com/MattChanTK/gym-maze.git
