--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,31 @@
 language: python
 jobs:
   include:
-    # - name: "Python 3.8 on Xenial linux"
-    #   python: 3.8
-    #   os: linux
-    #   dist: xenial
-    #   arch: amd64
-    # - name: "Python 3.6 on Xenial linux"
-    #   python: 3.6
-    #   os: linux
-    #   dist: xenial
-    #   arch: amd64
+    - name: "Python 3.8 on Xenial linux"
+      python: 3.8
+      os: linux
+      dist: xenial
+      arch: amd64
+    - name: "Python 3.6 on Xenial linux"
+      python: 3.6
+      os: linux
+      dist: xenial
+      arch: amd64
     - name: "Python 3.7 on Xenial linux"
       python: 3.7
       os: linux
       dist: xenial
       arch: amd64
-    # - name: "Python 3.7 on Bionic linux"
-    #   python: 3.7
-    #   os: linux
-    #   dist: bionic
-    #   arch: amd64
-    # - name: "Python 3.7 on Focal linux"
-    #   python: 3.7
-    #   os: linux
-    #   dist: focal
-    #   arch: amd64
+    - name: "Python 3.7 on Bionic linux"
+      python: 3.7
+      os: linux
+      dist: bionic
+      arch: amd64
+    - name: "Python 3.7 on Focal linux"
+      python: 3.7
+      os: linux
+      dist: focal
+      arch: amd64
     - name: "Python 3.7 on Xenial linux on arm64"
       python: 3.7
       os: linux
